--- a/python/python-day-01.ipynb
+++ b/python/python-day-01.ipynb
@@ -165,17 +165,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-f0d64e8c6d56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mpi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mpi\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pi' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# define r\n",
+    "r = 10\n",
+    "d = r * 2\n",
+    "a = r * r * pi\n",
+    "v = (4/3) * pi * (r**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# define r\n",
     "r = 10\n",
-    "diameter = d\n",
-    "d = r * "
+    "pi = 3.14\n",
+    "d = r * 2\n",
+    "a = r * r * pi\n",
+    "v = (4/3) * pi * (r**3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "r = 10\n",
+    "pi = 3.14\n",
+    "d = r * 2\n",
+    "a = r * r * pi\n",
+    "v = (4/3) * pi * (r**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "r = 10\n",
+    "pi = 3.14\n",
+    "d = r * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "62.800000000000004\n",
+      "314.0\n",
+      "4186.666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 10\n",
+    "pi = 3.14\n",
+    "diameter = r * 2\n",
+    "circumference = diameter * pi\n",
+    "area = r * r * pi\n",
+    "volume = (4/3) * pi * (r**3)\n",
+    "\n",
+    "print(diameter)\n",
+    "print(circumference)\n",
+    "print(area)\n",
+    "print(volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-7355a0a72d06>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-7355a0a72d06>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    print(\"diameter = \" diameter)\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 10\n",
+    "pi = 3.1415\n",
+    "diameter = r * 2\n",
+    "circumference = diameter * pi\n",
+    "area = r * r * pi\n",
+    "volume = (4/3) * pi * (r**3)\n",
+    "\n",
+    "print(\"diameter = \" diameter)\n",
+    "print(\"circumference = \" circumference)\n",
+    "print(\"area = \" area)\n",
+    "print(\"volume\" volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diameter =  20\n",
+      "circumference =  62.830000000000005\n",
+      "area =  314.15000000000003\n",
+      "volume 4188.666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 10\n",
+    "pi = 3.1415\n",
+    "diameter = r * 2\n",
+    "circumference = diameter * pi\n",
+    "area = r * r * pi\n",
+    "volume = (4/3) * pi * (r**3)\n",
+    "\n",
+    "print(\"diameter =\", diameter)\n",
+    "print(\"circumference =\", circumference)\n",
+    "print(\"area =\", area)\n",
+    "print(\"volume =\", volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diameter = 20\n",
+      "circumference = 62.830000000000005\n",
+      "area = 314.15000000000003\n",
+      "volume = 4188.666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "#HOMEWORK COMPLETE!\n",
+    "\n",
+    "r = 10\n",
+    "pi = 3.1415\n",
+    "diameter = r * 2\n",
+    "circumference = diameter * pi\n",
+    "area = r * r * pi\n",
+    "volume = (4/3) * pi * (r**3)\n",
+    "\n",
+    "print(\"diameter =\", diameter)\n",
+    "print(\"circumference =\", circumference)\n",
+    "print(\"area =\", area)\n",
+    "print(\"volume =\", volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
