--- a/md/2017_07_25.md
+++ b/md/2017_07_25.md
@@ -55,6 +55,12 @@
 
   사용자가 입력한 자료형을 평가하는 함수
 
+- for and while
+
+  for은 주로 반복에
+
+  while은 주로 조건문에 사용
+
 - string formatting
 
   ```python
@@ -82,6 +88,8 @@
 
   ```python
   numbers = [1, 2, 3, 4, 5, 6, 7]
+  numbers[3] #리스트의 3+1번째에 있는 요소를 알려준다
+  len(numbers) #리스트의 요소가 몇 개 있는지 알려준다 (7)
   numbers.append(8) # 8을 추가한다. 보통 맨 마지막 자리.
   numbers.insert(0, 'a') # 0번 자리에 'a'를 넣는다
   numbers.remove(4) # 요소 4를 제외한다 
@@ -90,6 +98,15 @@
   numbers.reverse() # 리스트를 역순으로 출력한다
   numbers.index(6) # 6의 위치값을 출력한다
   numbers.extend([10, 11]) # 리스트끼리 더할때
+  ```
+
+- list slicing
+
+  ```python
+  animals = "catdogfrog"
+  cat  = animals[:2+1] # 0번부터 2번까지
+  dog  = animals[3:5+1] # 3번부터 5번까지
+  frog = animals[6:] # 6번부터 끝가지     
   ```
 
 - tuple
@@ -125,7 +142,6 @@
   #numguess
   import random
 
-
   #choose the answer randomly
   answer = random.randint(1,100)
   print(answer)
@@ -134,24 +150,22 @@
   user_name = input("Hi, What is your name? ")
   guess = eval(input("Hi, %s. Plz guess the INTEGER!!! " % (user_name)))
 
-  #out put
+  #output
   if answer == guess:
-      print("You are amazing")
+      print("you are amazing! ")
   else:
-      print("I'm sorry ")
+      print("I'm sorry. ")
   ```
 
-- for & while
+- list and tuple
 
   ```python
   for _Var in (_List or _Str):
       Process
-  ```
-
-  ```python
   while _Var in (_List or _Str):
       Process
   ```
+
 
 - Fizzbuzz
 
@@ -191,4 +205,5 @@
           change = change + 1 # 1/3의 확률에서 not 1을 골랐으므로 바꾸는게 낫다
   print(stay, change)
   ```
+
 
