--- a/md/2017_07_26.md
+++ b/md/2017_07_26.md
@@ -4,4 +4,83 @@
 
 ### FastC CS 03
 
-- ​
+- Ethiopian Multiplications
+
+  ```python
+  #Ethiopian Mul
+
+  numbers = str(input("two nums with space: ")).split()
+
+  result = 0
+  num1 = int(numbers[0])
+  num2 = int(numbers[1])
+
+  while num1 >= 1:
+      if num1 % 2 == 0:
+          print("%4d %5d struck" % (num1, num2))
+      else:
+          print("%4d %5d keep" % (num1, num2))
+          result = result + num2
+          
+      num1 = num1 // 2
+      num2 = num2 * 2
+
+  print("the result is", result)
+  ```
+
+- list split > tuple
+
+  ```python
+  facamp = 'fastcampus'
+  tuple_facamp = tuple(".".join(facamp).split("."))
+  print(tuple_facamp)
+  ```
+
+- dictionary and set
+
+  list와 tuple과 다르게 자리가 없다
+
+- dictionary
+
+  ```python
+  #dictionary
+
+  dic = {} # dictionary의 선언
+  dic1 = {'name':'foo ba'} # key:value로 이루어져있다
+  del dic['math'] # key와 value 모두 삭제
+  print(dic1['korean']) #key를 활용해 value를 출력
+  print(dic.keys()) # key만 모두 출력함
+  print(dic.values()) # value만 모두 출력함
+  print(dic.items()) # key와 value를 함께 출력함
+  ```
+
+- set
+
+  수학의 집합연산을 쉽게 하기 위해 만든 자료형, 순서 X, 중복 X
+
+  ```python
+  #set
+
+  ppap = {'pen', 'apple', 'pineapple', 'pen'}
+  # dict와 같지만 key와 value값이 없다
+
+  fast = set('fastcampus')
+  pyy = set('python')
+  print(fast & pyy)
+  print(fast | pyy)
+  print(fast - pyy)
+  print(fast ^ pyy)
+  ```
+
+- list comprehension
+
+  존재하는 리스트를 활용하여 새로운 리스트를 생성하는 방법
+
+  eg. set comp, dict comp, parallal list comp
+
+  ```python
+  nums = list(range(1,100+1))
+  fizzbuzz = ["Fizz"* (i % 3 == 0) + "Buzz" * (i % 5 == 0) or i for i in nums] # or i 
+  # fizzbuzz = ["Fizz"* (i % 3 == 0) + "Buzz" * (i % 5 == 0) and i for i in nums] # 앞이 true일 때만 i 출력 
+  fizzbuzz
+  ```
