--- a/practice-python/python-basic-day02.ipynb
+++ b/practice-python/python-basic-day02.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Type casting\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "int(3.4)"
@@ -22,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "int(3.7)"
@@ -31,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "str(100)"
@@ -40,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "int(\"100\")"
@@ -49,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#user input\n",
@@ -61,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "age = eval(input(\"How old are you? \"))\n",
@@ -71,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#string formatting\n",
@@ -90,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#strings\n",
@@ -102,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "some_string[3:5]"
@@ -111,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "some_string[1:5+1:2] "
@@ -120,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "some_string[::] == some_string[0:len(some_string):1]"
@@ -129,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "some_string[::-1]"
@@ -138,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "another_string = \"wanna eat a cheese burger\"\n",
@@ -148,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "another_string.find('e') #제일 첫번째 것만 찾는다"
@@ -157,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "comma = \"-\"\n",
@@ -168,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "commadd.split('-') #리스트에 묶여 출력되게 된다"
@@ -189,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "another_string.replace('cheese', 'beef')"
@@ -198,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#list\n",
@@ -213,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lang.insert(1,'c')\n",
@@ -223,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lang.remove('c')\n",
@@ -233,7 +275,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "java = lang.pop(1) #pop 할 시에 아무 변수에도 저장하지 않으면 요소는 날라가버린다\n",
@@ -243,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "numbers = [0, 1, 0, 9, 3, 4, 7, 9, 8, 7, 3]\n",
@@ -254,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "numbers.reverse()\n",
@@ -268,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "numbers.index(1) # ()안에 있는 요소의 위치를 출력한다."
@@ -277,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "color = [['black', 'white'],'red', 'blue', 'green'] #리스트 안 요소로 리스트가 들어올 수 있다\n",
@@ -289,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#tuple\n",
@@ -466,7 +520,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sum = 0\n",
@@ -494,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Fizzbuzz\n",
@@ -512,16 +570,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "323 677\n"
+     ]
+    }
+   ],
    "source": [
     "# MontyHall Quiz\n",
     "\n",
     "import random\n",
     "\n",
+    "\n",
     "stay = 0 #남아있을때 이기는 경우의 수\n",
-    "change = 0 #바꿔야 이기는 경우의 수\n",
+    "switch = 0 #바꿔야 이기는 경우의 수\n",
     "\n",
     "for i in range(1000): # 0 ~ 999까지 천 번 반복한다\n",
     "    #doors = [1,0,0]\n",
@@ -531,15 +598,16 @@
     "    if choice == 1:\n",
     "        stay = stay + 1 # 1/3의 확률에서 1을 골랐으므로 머무는게 낫다\n",
     "    elif choice != 1:\n",
-    "        change = change + 1 # 1/3의 확률에서 not 1을 골랐으므로 바꾸는게 낫다\n",
-    "print(stay, change)\n",
-    "        "
+    "        switch = switch + 1 # 1/3의 확률에서 not 1을 골랐으므로 바꾸는게 낫다\n",
+    "print(stay, switch)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
