4th August, daily

--- a/practice-python/python-basic-day06.ipynb
+++ b/practice-python/python-basic-day06.ipynb
@@ -440,9 +440,9 @@
     "# result = {'a': 3, 'b': 2, 'c':1}\n",
     "\n",
     "\n",
-    "# res = reduce(lambda r, ch: r.update({ch:r.get(ch,0)+1}) or r, lis01, {})\n",
-    "res = reduce(lambda result, word: result.update({word:result.get(word,0)+1}) or result, lis01, {})\n",
-    "res"
+    "res = reduce(lambda r, ch: r.update({ch:r.get(ch,0)+1}) or r, lis01, {})\n",
+    "#res = reduce(lambda result, word: result.update({word:result.get(word,0)+1}) or result, lis01, {})\n",
+    "print(res)"
    ]
   },
   {
@@ -605,7 +605,9 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#추가하고싶은 기능 : 함수의 콜 횟수\n",
