--- a/md/2017_08_04.md
+++ b/md/2017_08_04.md
@@ -2,45 +2,47 @@
 
 ## 2017-08-04
 
-### FastC CS 08
+## FastC CS 08
 
-- call by reference
+### CALL BY REFERENCE
 
-  ```python
-  ## call by reference
+```python
+## call by reference
 
-  a = 1024
-  b = 1024
+a = 1024
+b = 1024
 
-  print(a == b)
-  print(a is b) ## bcz hex(id(a)) != hex(id(b)), 메모리 주소 공간이 다르다
-  ```
+print(a == b)
+print(a is b) ## bcz hex(id(a)) != hex(id(b)), 메모리 주소 공간이 다르다
+```
 
-  ```python
-  ## call by assignment
+```python
+## call by assignment
 
-  def func(x, v):
-      print('x is a : ', x is a)
-      x = v
-      print('x is a :', x is a)
-      
-  a = 10
-  func(a, 20)
+def func(x, v):
+    print('x is a : ', x is a)
+    x = v
+    print('x is a :', x is a)
+    
+a = 10
+func(a, 20)
 
-  # #result
-  # x is a :  True
-  # x is a : False
-  ```
+# #result
+# x is a :  True
+# x is a : False
+```
 
-  ```
 
-  ```
 
-- 자료형
+---
 
-  수 (number) == 정수(integer)와 실수 _ 양수와 음수
 
-  문자(character)와 문자형(strings)_ ASCII 와 UNICODE
+
+### INTEGER AND FLOAT
+
+수 (number) == 정수(integer)와 실수 _ 양수와 음수
+
+문자(character)와 문자형(strings)_ ASCII 와 UNICODE
 
 - 음수의 표현 (2의 보수법 two's complement)
 
@@ -80,7 +82,13 @@
   #= b'\x01\x02\x03\x04'
   ```
 
-- 2의 보수법
+  ​
+
+  ---
+
+  ​
+
+  ### 2의 보수법
 
   * +31 = 0001 111
   * -31 = 1110 0001 왜? +0, -0을 없애기 위해서, 더 많은 수를 표현하기 위해서
@@ -90,10 +98,15 @@
 
 - ```
   0의 비트를 반전시키면 -1
-
   ```
 
-- floating pint : 부동소수점 >> 실수
+  ​
+
+  ---
+
+  ​
+
+  ### floating point 
 
 - * 표현 범위가 넓다
   * 정밀도가 떨어진다
@@ -181,8 +194,46 @@
   epsilon=2.220446049250313e-16, #1과 1다음에 표현할 수 있는 수의 차이
   #radix or base : the number of unique digits
   radix=2,
-  rounds=1)
+  rounds=1
   ```
 
 
+
+
+---
+
+
+
+###ASCII & UNICODE
+
+  컴퓨터는 0101밖에 모르는데 어떻게 문자를 컴퓨터에 저장할까?
+
+  문자를 어떤 숫자로 대응시켜서(mapping) 숫자로 표현하자. 
+
+- ASCII
+
+  영어에서는 0-127까지만 필요함 character 자료형. 
+
+  eg. 0이라는 숫자 문자형은 48(decimal)
+
+- Unicode
+
+  2byte로 늘리고 더 많은 문자와 부호를 넣는 매핑 테이블을 만듦
+
+  모자를지도 모른다는 생각에 평면을 16개 더 만듦 UTF-16
+
+- 유니코드의 부호화 방식 (encoding)
+
+  * UTF - 8
+  * * 8bit 기반
+    * 가변 길이 유니코드 인코딩 시스템 (ex. 영어 = 1byte, 한글 = 3 byte)
+  * UTF - 16
+  * * BMP(Basic multilingual plane) : 다국어 기본 평면 : 16 bit
+    * SMP(Supplementary Multilingual plane) 이상 : 다국어 보충 평면~ : 32 bit
+  * UTF - 32
+  * * 모든것을 다 32 bit 기반으로 저장.
+
+- Windows의 부호화 방식 CP949
+
+  * 통합형 한글코드 (unified Hangul Code)
 
