8th Aug, lunchtime

--- a/md/2017_08_01.md
+++ b/md/2017_08_01.md
@@ -2,7 +2,7 @@
 
 ## 2017-08-01
 
-### FastC CS 06
+## FastC CS 06
 
 - 순회 가능한 객체
 
@@ -191,6 +191,9 @@
   # 앞 값이 false. 마지막 참조값은 dic. 그러므로 dic 반환.
   ```
 
+
+### reduce
+
 - reduce의 초기값
 
   ```python
@@ -210,14 +213,17 @@
   lis01 = ['a','b','c','a','b','a']
   # result = {'a': 3, 'b': 2, 'c':1}
 
+  res = reduce(lambda r, ch: r.update({ch:r.get(ch,0)+1}) or r, lis01, {})
 
-  # res = reduce(lambda r, ch: r.update({ch:r.get(ch,0)+1}) or r, lis01, {})
-  res = reduce(lambda result, word: result.update({word:result.get(word,0)+1}) or result, lis01, {})
-  res
+  #res = reduce(lambda result, word: result.update({word:result.get(word,0)+1}) or result, lis01, {})
+
+    res
   ```
 
-- decorator
 
+### decorator
+
+  ```
   함수 위에 이미 만들어놓은 기능을 추가할 수 있다. add on?
 
   ```python
