--- a/md/2017_08_03.md
+++ b/md/2017_08_03.md
@@ -2,236 +2,221 @@
 
 ## 2017-08-03
 
-### FastC CS 07
+## FastC CS 07
 
-### *function
+### function
 
-* stackframe & argument passing method
+stackframe & argument passing method
 
-  stackframe은 함수 내에 정의된 변수가 저장되는 공간 = stackframe
+stackframe은 함수 내에 정의된 변수가 저장되는 공간 = stackframe
 
-  func에 의해 생성된 frame은 크기가 고정되어있다. (지역 변수의 개수에 맞춰)
+func에 의해 생성된 frame은 크기가 고정되어있다. (지역 변수의 개수에 맞춰)
 
-  다른 곳에서 func를 불러올 때 마다 stackframe만큼의 메모리 공간을 확정해 놓음
+다른 곳에서 func를 불러올 때 마다 stackframe만큼의 메모리 공간을 확정해 놓음
 
-  함수는 실행되는 동안 블로킹 된다.
+함수는 실행되는 동안 블로킹 된다.
 
-  ```c
-    #쌓이는 순서 변수는 오른쪽부터 왼쪽으로. 그 다음부터는 아래로 ← / ↓
-    #이 함수에서는 b-a-c-d 순서
-    #stack은 접시쌓기. 마지막에 들어온 것이 처음으로 나간다.
-    #LIFO, Last in first out
-    
-    #include <iostream>
-  using namespace std;
-
-  int main(void)
-  {
-  	int a = 10;
-  	int b = 5; 
-  	int res = test(a, b); 
-  	cout << "result of test : " << res << endl;
-
-  	return 0;
-  }
-
-  int test(int a, int b)
-  {
-  	int c = a + b;
-  	int d = a - b;
-  	return c + d;
-  }
-
-  ```
-
-  **stackframe flow**
-
-  0. symbol table에서 main 함수를 참조하여 stackframe에 메모리 할당.
-  1. a 값
-  2. b 값 
-  3. symbol table에서 test 참조 후 test의 stackframe 생성 (main함수는 blocking)
-  4. res의 a 값  != 1.의 a값. 다른 메모리에 할당되었기 때문. call by value
-  5. res의 b 값
-  6. res의 c 값
-  7. res의 d 값
-  8. c+d값이 res에 들어감
-  9. test 함수 stackframe 종료되면서 res의 값
-
-  ```c
+```c
+  #쌓이는 순서 변수는 오른쪽부터 왼쪽으로. 그 다음부터는 아래로 ← / ↓
+  #이 함수에서는 b-a-c-d 순서
+  #stack은 접시쌓기. 마지막에 들어온 것이 처음으로 나간다.
+  #LIFO, Last in first out
+  
   #include <iostream>
-  using namespace std;
+using namespace std;
 
-  void change_value(int x, int value)
-  {
-  	x = value;
-  	cout << "x : " << x <<" in change_value" << endl;
-  }
+int main(void)
+{
+	int a = 10;
+	int b = 5; 
+	int res = test(a, b); 
+	cout << "result of test : " << res << endl;
 
-  int main(void)
-  {
-  	int x = 10;
-  	change_value(x, 20);
-  	cout << "x : " << x << " in main" << endl;
+	return 0;
+}
 
-  	return 0;
-  }
+int test(int a, int b)
+{
+	int c = a + b;
+	int d = a - b;
+	return c + d;
+}
+```
 
-  ```
+### stackframe flow
 
-  call by value는 x = 10을 다른 메모리에 복사를 하여 전달한다.
+0. symbol table에서 main 함수를 참조하여 stackframe에 메모리 할당.
+1. a 값
+2. b 값 
+3. symbol table에서 test 참조 후 test의 stackframe 생성 (main함수는 blocking)
+4. res의 a 값  != 1.의 a값. 다른 메모리에 할당되었기 때문. call by value
+5. res의 b 값
+6. res의 c 값
+7. res의 d 값
+8. c+d값이 res에 들어감
+9. test 함수 stackframe 종료되면서 res의 값
 
-  ```c
-  #include <iostream>
-  using namespace std;
+```c
+#include <iostream>
+using namespace std;
 
-  void change_value(int * ptr, int value) # int형 포인터 = 4바이트만 참조
-  {
-  	*ptr = value; # 값이 아니라 *x는 포인터. 16진수의 &x 주소를 가르키고 있다.
-  	cout << "x : " << * ptr << " in change_value" << endl;
-  }
+void change_value(int x, int value)
+{
+	x = value;
+	cout << "x : " << x <<" in change_value" << endl;
+}
 
-  int main(void)
-  {
-  	int x = 10;
-  	change_value(&x, 20); # &x 는 값이 아니라 x의 메모리 주소값.
-  	cout << "x : " << x << " in main" << endl;
+int main(void)
+{
+	int x = 10;
+	change_value(x, 20);
+	cout << "x : " << x << " in main" << endl;
 
-  	return 0;
-  }
-  ```
+	return 0;
+}
 
-*  python의 stackframe
+```
 
-  ```python
-  #stackframe of python
-  #call by object reference (call by assignment)
+call by value는 x = 10을 다른 메모리에 복사를 하여 전달한다.
 
-  def change_value(x, value):
-      x = value
-      print ("x : {} in cahnge_value".format(x))
+```c
+#include <iostream>
+using namespace std;
 
-  print(change_value)
+void change_value(int * ptr, int value) # int형 포인터 = 4바이트만 참조
+{
+	*ptr = value; # 값이 아니라 *x는 포인터. 16진수의 &x 주소를 가르키고 있다.
+	cout << "x : " << * ptr << " in change_value" << endl;
+}
 
-  x = 10
-  change_value(x, 20)
-  print ("x : {} in cahnge_value".format(x)
-  ```
+int main(void)
+{
+	int x = 10;
+	change_value(&x, 20); # &x 는 값이 아니라 x의 메모리 주소값.
+	cout << "x : " << x << " in main" << endl;
 
-  python은 mutable / immutable 일때 참조방식이 다르다
+	return 0;
+}
+```
+### python's stackframe
 
-* python 의 reference count
+```python
+#stackframe of python
+#call by object reference (call by assignment)
 
-  c/c++의 경우는 메모리를 프로그래머가 할당하고 사용 후 할당치를 지워야 한다.
+def change_value(x, value):
+    x = value
+    print ("x : {} in cahnge_value".format(x))
 
-  python의 경우는 heap에 참조여부에 따라 refernce count 값을 갖고 있고, reference count가 0되는 순간 참조값이 메모리에서 사라진다 (garbage colletion)
+print(change_value)
 
-  ```python
-  # reference count
-  import sys
+x = 10
+change_value(x, 20)
+print ("x : {} in cahnge_value".format(x)
+```
 
-  s = "I'm your father"
-  sys.getrefcount(s) # 2 
+python은 mutable / immutable 일때 참조방식이 다르다
 
-  b = s
-  sys.getrefcount(s) # 3
-  ```
+python 의 reference count
 
-  ```python
-  a = 1
-  sys.getrefcount(a) # 매우 큰 수가 나옴
+c/c++의 경우는 메모리를 프로그래머가 할당하고 사용 후 할당치를 지워야 한다.
 
-  # 객체를 만들고 지우는 것은 많은 리소스를 만들어 놓는다.
-  # 그래서 a,1과 같은것은 미리 많이 많들어놓는다. (object tree)
-  ```
+python의 경우는 heap에 참조여부에 따라 refernce count 값을 갖고 있고, reference count가 0되는 순간 참조값이 메모리에서 사라진다 (garbage colletion)
 
-  ```python
-  # mutable 
-  def func(li):
-      li[0] = 10 # 접근해서 바꾼다.
-      print(li)
+```python
+# reference count
+import sys
 
-  li = [1, 2, 3, 4]
-  func(li)
-  ```
+s = "I'm your father"
+sys.getrefcount(s) # 2 
 
-  ```python
-  def func(a):
-      a = [10, 1, 2, 3,] # 새로운 메모리로 할당한다.
-      print(li)
+b = s
+sys.getrefcount(s) # 3
+```
 
-  li = [1, 2, 3, 4]
-  func(li)
-  ```
+```python
+a = 1
+sys.getrefcount(a) # 매우 큰 수가 나옴
 
-  ```python
-  # mutable 
-  def func(li):
-      li[0] = 10
+# 객체를 만들고 지우는 것은 많은 리소스를 만들어 놓는다.
+# 그래서 a,1과 같은것은 미리 많이 많들어놓는다. (object tree)
+```
 
-  li = [1, 2, 3, 4]
-  func(li)
-  ```
+```python
+# mutable 
+def func(li):
+    li[0] = 10 # 접근해서 바꾼다.
+    print(li)
 
-  **python에서 간략 설명**
+li = [1, 2, 3, 4]
+func(li)
+```
 
-  1. **mutable**
+```python
+def func(a):
+    a = [10, 1, 2, 3,] # 새로운 메모리로 할당한다.
+    print(li)
 
-     1. **요소를 바꾼다  >> 변경 가능**
+li = [1, 2, 3, 4]
+func(li)
+```
 
-        **eg. li[2] = another value**
+```python
+# mutable 
+def func(li):
+    li[0] = 10
 
-     2. **리스트를 통째로 바꾼다 >> 변경 불가 (메모리 할당을 새로 한 것이기 때문)**
+li = [1, 2, 3, 4]
+func(li)
+```
 
-        **eg. li = [1, 2, 3, 4,]**
+### python's "call"
 
-  2. **immutable (문자열string, 튜플tuple, 상수constant)**
+1. mutable
 
-     **변경이 되지 않는다**
+   1. 요소를 바꾼다  >> 변경 가능
 
-* decimal, binary, hexdecimal
+      eg. li[2] = another value
 
-  decimal = 10진수 / 10 == base, radix, 기수
+   2. 리스트를 통째로 바꾼다 >> 변경 불가 (메모리 할당을 새로 한 것이기 때문)
 
-  binary = 2진수 / 컴퓨터는 전압으로 0,1을 판단 5V - 0V사이. 5V에 가까우면 1
+      eg. li = [1, 2, 3, 4,]
 
-  hexdecimal = 0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F / radix = 16
+2. immutable (문자열string, 튜플tuple, 상수constant)
 
-  **16진수를 2진수로 바꾸는 것과, 2진수를 16진수로 바꾸는 것은 정말 잘해야한다.**
+   변경이 되지 않는다
 
-  16진수 한 자리는 2진수 4자리
+### decimal, binary, hexdecimal
 
-  a = 1010 / b = 1011 / c = 1100 / d = 1101 / e = 1110 / f = 1111
+decimal = 10진수 / 10 == base, radix, 기수
 
-  cf. 0x = hexdicimal / 0b = binary
+binary = 2진수 / 컴퓨터는 전압으로 0,1을 판단 5V - 0V사이. 5V에 가까우면 1
 
-  2진수 >> 16진수 ==  2진수를 4개로 쪼개서 계산한다.
+hexdecimal = 0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F / radix = 16
 
-* 32bit(4byte) & 64bit(8byte)
+**16진수를 2진수로 바꾸는 것과, 2진수를 16진수로 바꾸는 것은 정말 잘해야한다.**
 
-  1byte = 8bit
+16진수 한 자리는 2진수 4자리
 
-  cpu에서 RAM으로 데이터 통신을 하는 wire가 32개 or 64개
+a = 1010 / b = 1011 / c = 1100 / d = 1101 / e = 1110 / f = 1111
 
-  memory 1 byte 하나당 주소값 하나. 2진수 8개 (16진수 하나)
+cf. 0x = hexdicimal / 0b = binary
 
-  그러므로 0x00000000 ~ 0xFFFFFFFF = 2^32 = 4,294,967,296 = 약 4G
+2진수 >> 16진수 ==  2진수를 4개로 쪼개서 계산한다.
 
-  최대 4G 램 밖에 쓸 수 없다.
+32bit(4byte) & 64bit(8byte)
 
-  64bit를 사용하면 2^64 만큼의 메모리 주소값이 가능.
+1byte = 8bit
 
-  0x0000000000000000 ~ 0xFFFFFFFFFFFFFFFF 까지
+cpu에서 RAM으로 데이터 통신을 하는 wire가 32개 or 64개
 
-* 정수intenger (양수positive)
+memory 1 byte 하나당 주소값 하나. 2진수 8개 (16진수 하나)
 
-* 정수intenger (정수negative) 
+그러므로 0x00000000 ~ 0xFFFFFFFF = 2^32 = 4,294,967,296 = 약 4G
 
-* intenger_ two's comlement(2의 보수)
+최대 4G 램 밖에 쓸 수 없다.
 
-* floating point number
+64bit를 사용하면 2^64 만큼의 메모리 주소값이 가능.
 
-  float, double, precision
+0x0000000000000000 ~ 0xFFFFFFFFFFFFFFFF 까지
 
-* string
-
-  ASCII / UNICODE
